# Prompt-based-API

./: README.md  load.sh  prompts.db  pyproject.toml  ruff.toml
app/: main.py
app/api/v1/routes/: items.py
app/core/: config.py  crud.py  database.py
app/models/: item.py  prompt.py
app/services/: item_service.py
tests/: test_db.py  test_prompt.py
